Fix create task fields on mobile

--- a/app/main.css
+++ b/app/main.css
@@ -45,10 +45,6 @@
     margin-right: 10px;
 }
 
-#new-task-form .btn {
-    margin-left: 10px;
-}
-
 #lists {
     height: 100%
 }
